--- a/burger-builder/public/index.html
+++ b/burger-builder/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link href="https://fonts.google.com/share?selection.family=Open%20Sans:wght@400;700"/>
+    <title>MyBurger</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
